# bmsap

./: .gitignore  CMakeLists.txt  GNUmakefile  README  angle.f  bms_ap.Linux  cmshif.f  compile  eigsrt.f  jacobi.f  normvalue.f  obsvalue.f  oscarnxtev.f  output.f  propag.f  readwt.f  sample.in  sample_multi.in  sqr.f
src/: CMakeLists.txt  bms_ap.f  cubic.f  evalue.f  flow.f  frag.f  fragphase.f  gridin.f  hicoms.f  iniflw.f  input.f  obstring.f  obsvalue.f  oscarnxtev.f  output.f  ratio.f  readwt.f  reftrans.f  ucoms.f
